--- a/index.html
+++ b/index.html
@@ -3,18 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agrotec</title>
-    <link rel="styleheet" href="./estilo.css">
-    <link rel="styleheet" href="./reset.css">
-
+    <title>Refloretamento</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
     <header class="cabecalho">
-    <span class="cabecalho--menu-hamburguer"></span>
-     <img src="./img/logo.png" alt="logo projeto agrinho"
-     
+        <div class="container">
+            <input type="checkbox" name="menu" id="container--botao">
+            <label for="menu"></label>
+            <span class="cabecalho--menu-hamburguer"></span>
+            </label>
+         <ul class="lita-menu>"
+            <li class="lista-menu--item">HOME</li>
+            <li class="lista-menu--item">SCRACTH</li>
+             <li class="lista-menu--item">PROGRAMAÇÃO</li>
+             </ul>
+        </div>
+        <h2 class=cabecalho--titulo>Reflorestamento</h2> 
+        <img src="./Vector (1).png" alt="">
+
+
+
+
     </header>
+<section>
+    <img src="./arvore.png" alt="">
+</section>
+<section class="conteudo1">
+    <p>O reflorestamento é necessário para garantir a conservação da biodiversidade, equilibrar os efeitos das mudanças climáticas, filtrar poluentes atmosféricos e regular o fluxo de água, além de contribuir na absorção de CO2 da atmosfera, auxiliando na redução do efeito estufa.</p>
+<p>O reflorestamento ambiental é uma prática essencial para a preservação e recuperação dos ecossistemas, sendo responsável pela manutenção do equilíbrio ecológico do nosso planeta. </p>
+ <p>Trata-se do processo de plantio de árvores em áreas previamente degradadas, desmatadas ou que tenham perdido sua cobertura vegetal original, visando restabelecer as condições naturais e proporcionar uma série de benefícios ambientais.</p>   
 
 
+</section>
+<section>
+    <img src="./unnamed-22-1651613851 2.png" alt="crianca">
+</section>
+<footer class="rodape">
+    <p>#Agrotec.</p>
+</footer>
 </body>
 </html>
