--- a/index.html
+++ b/index.html
@@ -20,20 +20,27 @@
              <li class="lista-menu--item">PROGRAMAÇÃO</li>
              </ul>
         </div>
-        <h2 class=cabecalho--titulo>Reflorestamento</h2> 
-        <img src="./Vector (1).png" alt="">
+        <h2 class=cabecalho--titulo>#Agrotec</h2> 
+        <img src="./download (1) 1.png" alt="">
 
 
 
 
     </header>
 <section>
-    <img src="./arvore.png" alt="">
+    <img src="./download (1) 1.png" alt="">
 </section>
 <section class="conteudo1">
-    <p>O reflorestamento é necessário para garantir a conservação da biodiversidade, equilibrar os efeitos das mudanças climáticas, filtrar poluentes atmosféricos e regular o fluxo de água, além de contribuir na absorção de CO2 da atmosfera, auxiliando na redução do efeito estufa.</p>
-<p>O reflorestamento ambiental é uma prática essencial para a preservação e recuperação dos ecossistemas, sendo responsável pela manutenção do equilíbrio ecológico do nosso planeta. </p>
- <p>Trata-se do processo de plantio de árvores em áreas previamente degradadas, desmatadas ou que tenham perdido sua cobertura vegetal original, visando restabelecer as condições naturais e proporcionar uma série de benefícios ambientais.</p>   
+    <p>A revolução tecnológica também chegou ao agronegócio, e o conceito de agrotech tem tudo a ver com isso.
+        As atividades agropecuárias estão entre as mais antigas do mundo, mas isso não significa que elas não possam se atualizar e se modernizar, muito pelo contrário.
+        A substituição de métodos ultrapassados por atividades produtivas que otimizam a cadeia de suprimentos é uma necessidade cada vez mais urgente.
+        Uma demonstração de como esse tipo de movimentação tem se mostrado uma tendência é este relatório da AgTech Garage (em inglês), um dos principais hubs de inovação do agronegócio mundial.
+        Segundo o levantamento, são mais de 800 startups atuando no setor para trazer soluções como cultivo protegido, verticalização, fazendas urbanas, controle de pragas, drones e aeronaves tripuladas, previsão climática e muitas outras.
+        Você se interessa em saber mais sobre agrotech e a sua importância?
+        Ao longo deste artigo, vamos abordar o mercado de atuação dessas startups, as principais tendências e novidades do setor e também alguns exemplos de empresas do ramo.</p>
+        
+
+
 
 
 </section>
