--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              </ul>
         </div>
         <h2 class=cabecalho--titulo>#Agrotec</h2> 
-        <img src="./download (1) 1.png" alt="">
+        <img src="./images (1) (1) (1) 2.png" alt="">
 
 
 
