--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </section>
 <footer class="rodape">
     <p>#Agrotec.</p>
+    <img src="./images (1) (1) (1) 2.png" alt="">
 </footer>
 </body>
 </html>
