--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li class="lista-menu--item">SCRACTH</li>
              <li class="lista-menu--item">PROGRAMAÇÃO</li>
              </ul>
-        </div>
-        <h2 class=cabecalho--titulo>#Agrotec</h2> 
+        </div
+        <h2 class=cabecalho--titulo></h2> 
         <img src="./images (1) (1) (1) 2.png" alt="">
 
 
@@ -48,7 +48,7 @@
     <img src="./unnamed-22-1651613851 2.png" alt="crianca">
 </section>
 <footer class="rodape">
-    <p>#Agrotec.</p>
+    <p></p>
     <img src="./images (1) (1) (1) 2.png" alt="">
 </footer>
 </body>
