--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              </ul>
         </div
         <h2 class=cabecalho--titulo></h2> 
-        <img src="./images (1) (1) (1) 2.png" alt="">
+        <img src="" alt="">
 
 
 
