--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <label for="menu"></label>
             <span class="cabecalho--menu-hamburguer"></span>
             </label>
+            <img src="./images (1) (1) (1) 2.png" alt="">
          <ul class="lita-menu>"
             <li class="lista-menu--item">HOME</li>
             <li class="lista-menu--item">SCRACTH</li>
