--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="./unnamed-22-1651613851 2.png" alt="crianca">
 </section>
 <footer class="rodape">
-    <p></p>
+    <p><div id="teccnologianoscampos"></div></p>
     <img src="./images (1) (1) (1) 2.png" alt="">
 </footer>
 </body>
