--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <img src="./unnamed-22-1651613851 2.png" alt="crianca">
 </section>
 <footer class="rodape">
-    <p><div id="teccnologianoscampos"></div></p>
-    <img src="./images (1) (1) (1) 2.png" alt="">
+    <p>#teccnologianoscampos/p>
+    <img src="" alt="">
 </footer>
 </body>
 </html>
