--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <img src="./unnamed-22-1651613851 2.png" alt="crianca">
 </section>
 <footer class="rodape">
-    <p>#teccnologianoscampos/p>
+    <p>#teccnologianoscampos
     <img src="" alt="">
 </footer>
 </body>
