--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="cabecalho--menu-hamburguer"></span>
             </label>
             <img src="./images (1) (1) (1) 2.png" alt="">
-         <ul class="lita-menu>"
+         <ul class="lista-menu>"
             <li class="lista-menu--item">HOME</li>
             <li class="lista-menu--item">SCRACTH</li>
              <li class="lista-menu--item">PROGRAMAÇÃO</li>
